--- a/Kleurenpsychologie/Kleurenpsychologie/MainWindow.xaml
+++ b/Kleurenpsychologie/Kleurenpsychologie/MainWindow.xaml
@@ -8,6 +8,7 @@
         Title="MainWindow" Height="450" Width="800" Background="LightGray">
     <Grid>
         <TextBlock Name="kleurenpsychologieTextBlock" HorizontalAlignment="Left" Margin="24,24,0,0" TextWrapping="Wrap" Text="Kleurenpsychologie" VerticalAlignment="Top" FontSize="16"/>
+<Image Source="/Images/PXL.png" Margin="626,0,-10,326" />
 
     </Grid>
 </Window>
