--- a/Kleurenpsychologie/Kleurenpsychologie/MainWindow.xaml
+++ b/Kleurenpsychologie/Kleurenpsychologie/MainWindow.xaml
@@ -9,6 +9,10 @@
     <Grid>
         <TextBlock Name="kleurenpsychologieTextBlock" HorizontalAlignment="Left" Margin="24,24,0,0" TextWrapping="Wrap" Text="Kleurenpsychologie" VerticalAlignment="Top" FontSize="16"/>
 <Image Source="/Images/PXL.png" Margin="626,0,-10,326" />
+<Image Source="/Images/Rood.png" Margin="-10,54,509,245" MouseEnter="Red_MouseEnter" MouseLeave="Red_MouseLeave"/>
+<Image Source="/Images/Geel.png" Margin="223,54,161,245" MouseEnter="Yellow_MouseEnter" MouseLeave="Yellow_MouseLeave"/>
+<Image Source="/Images/Groen.png" Margin="26,194,545,105" MouseEnter="Green_MouseEnter" MouseLeave="Green_MouseLeave"/>
+<Image Source="/Images/Blauw.png" Margin="275,194,213,105" MouseEnter="Blue_MouseEnter" MouseLeave="Blue_MouseLeave"/>
 
     </Grid>
 </Window>
