--- a/Kleurenpsychologie/Kleurenpsychologie/MainWindow.xaml
+++ b/Kleurenpsychologie/Kleurenpsychologie/MainWindow.xaml
@@ -9,10 +9,14 @@
     <Grid>
         <TextBlock Name="kleurenpsychologieTextBlock" HorizontalAlignment="Left" Margin="24,24,0,0" TextWrapping="Wrap" Text="Kleurenpsychologie" VerticalAlignment="Top" FontSize="16"/>
 <Image Source="/Images/PXL.png" Margin="626,0,-10,326" />
-<Image Source="/Images/Rood.png" Margin="-10,54,509,245" MouseEnter="Red_MouseEnter" MouseLeave="Red_MouseLeave"/>
-<Image Source="/Images/Geel.png" Margin="223,54,161,245" MouseEnter="Yellow_MouseEnter" MouseLeave="Yellow_MouseLeave"/>
-<Image Source="/Images/Groen.png" Margin="26,194,545,105" MouseEnter="Green_MouseEnter" MouseLeave="Green_MouseLeave"/>
-<Image Source="/Images/Blauw.png" Margin="275,194,213,105" MouseEnter="Blue_MouseEnter" MouseLeave="Blue_MouseLeave"/>
+<Image Source="/Images/Rood.png" Margin="-10,54,509,245" MouseEnter="Red_MouseEnter" MouseLeave="Red_MouseLeave" MouseDown="Red_MouseDown"/>
+<Image Source="/Images/Geel.png" Margin="223,54,161,245" MouseEnter="Yellow_MouseEnter" MouseLeave="Yellow_MouseLeave" MouseDown="Yellow_MouseDown"/>
+<Image Source="/Images/Groen.png" Margin="26,194,545,105" MouseEnter="Green_MouseEnter" MouseLeave="Green_MouseLeave" MouseDown="Green_MouseDown"/>
+<Image Source="/Images/Blauw.png" Margin="275,194,213,105" MouseEnter="Blue_MouseEnter" MouseLeave="Blue_MouseLeave" MouseDown="Blue_MouseDown"/>
+        <TextBlock Name="kleurcodeTextBlock" HorizontalAlignment="Left" Margin="39,343,0,0" TextWrapping="Wrap" Text="Kleurcode:" VerticalAlignment="Top"/>
+        <TextBox Name="kleurcodeTextBox" HorizontalAlignment="Left" Margin="140,343,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
+        <TextBlock Name="informatieTextBlock" HorizontalAlignment="Left" Margin="44,364,0,0" TextWrapping="Wrap" Text="Informatie:" VerticalAlignment="Top"/>
+        <TextBox Name="imformatieTextBox" HorizontalAlignment="Left" Margin="140,364,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
 
     </Grid>
 </Window>
