--- a/Kleurenpsychologie/Kleurenpsychologie/MainWindow.xaml
+++ b/Kleurenpsychologie/Kleurenpsychologie/MainWindow.xaml
@@ -16,7 +16,7 @@
         <TextBlock Name="kleurcodeTextBlock" HorizontalAlignment="Left" Margin="39,343,0,0" TextWrapping="Wrap" Text="Kleurcode:" VerticalAlignment="Top"/>
         <TextBox Name="kleurcodeTextBox" HorizontalAlignment="Left" Margin="140,343,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
         <TextBlock Name="informatieTextBlock" HorizontalAlignment="Left" Margin="44,364,0,0" TextWrapping="Wrap" Text="Informatie:" VerticalAlignment="Top"/>
-        <TextBox Name="imformatieTextBox" HorizontalAlignment="Left" Margin="140,364,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
+        <TextBox Name="informatieTextBox" HorizontalAlignment="Left" Margin="140,364,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
 
     </Grid>
 </Window>
